2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Correctness.mdp:
	* Gendarme.Rules.Correctness.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: New. Simple rule
	to look for missing null check on method's parameters. Porbably short
	lived wrt NullDerefRule being worked on actively but still a near-zero
	false positive solution for 2.2.
	* Makefile.am: Add moved rule and test to the build.

2008-10-30  Jesse Jones  <jesjones@mindspring.com>

	* dataflow/*.cs: Tweaked the verbose logging in the NullDerefRule 
	and associated classes so that the output is easier to parse and 
	explains where failures occurred.
	* NullDerefAnalysis.cs: 
	   - Endfinally should not pop anything off the stack.
	   - Leave should pop everything off the stack, not one frame.
	     (This was causing fatal exceptions in self-test).
	   - Leave should pop everything off the stack.
	   - Don't report a failure if the this argument to a method call
	     is Nullity.Unknown.

2008-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedRule.cs: Changed to use 
	OpCodeEngine and MethodSignature.
	* FinalizersShouldCallBaseClassFinalizerRule.cs: Moved from Design.
	Updated namespace and added support for OpCodeEngine.
	* FloatComparisonRule.cs: Add null check in IsApplicable method
	* Gendarme.Rules.Correctness.mdp: Add new rule to MD project file.
	* Makefile.am: Add moved rule and test to the build.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedRule.cs: Moved from Design.
	* Makefile.am: Add new rule and test to the build.

2008-10-23  Néstor Salceda  <nestor.salceda@gmail.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Refactored the